[package]
name = "dl-media"
version = "0.2.7"
edition = "2024"
license = "MIT"
description = "Media downloader and muxer (Built with Rust)"
homepage = "https://github.com/idolikechemistry/dl-media"
repository = "https://github.com/idolikechemistry/dl-media"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0" # Shell 自動補全
tokio = { version = "1.0", features = ["full"] } # 非同步運行
dialoguer = "0.11"
dirs = "5.0"
chrono = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
inquire = "0.9.4"
